--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -39,7 +39,10 @@
   url = "media/swiatlow_cv.pdf"
   weight = 70
 
-
+# [[main]]
+#   name = "Jet/E<sub>T</sub><sup>Miss</sup> indicomb"
+#   url = "misc/JetMetIndicomb.html"
+#   weight = 80
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/resume.pdf` and uncomment the lines below.
